--- a/Föreläsning 3/Kodexempel 2/style.css
+++ b/Föreläsning 3/Kodexempel 2/style.css
@@ -1,4 +1,4 @@
-
+*{ box-sizing: border-box; }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -24,4 +24,59 @@ a {
   padding: 1rem;
   border-radius: 10px;
   margin: 20px 0;
+}
+
+.ingredients h2, .instructions h2 {
+  margin-top: 0;
+}
+
+.ingredients ul, .instructions ul {
+  margin-bottom: 0;
+}
+
+img {
+  width: 400px;
+  max-width: 100%;
+  height: auto;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+.instructions {
+  border: 2px solid #E6E6FA;
+  padding: 1rem;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+.left-column {
+  width: 40%;
+  margin: 0;
+}
+
+.right-column {
+  width: 60%;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+footer { 
+  text-align: center;
+  border-top: 1px solid silver;
+  padding: 1rem;
 }
